# foxkids-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-dev  README.md  README.ru.md  constraints.txt  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: github-ci-front.yml  github-ci-series.yml  github-ci.yml
html/: about_channel.html  about_project.html  index.html  series.html
html/static/css/: colors.css  fonts.css  modal.css  player.css  style.css
html/static/js/: pages.js  player.js  program.js  promo.js  series.js
series_settings/: program.json  series.json
src/foxkids/: __main__.py  server.py
src/foxkids/adapters/: __init__.py  orm.py  script_manager.py  storage.py
src/foxkids/adapters/repositories/: abstract_repository.py  db_repository.py  fake_repository.py  file_repository.py
src/foxkids/domain/: __init__.py  block.py  features.py  series.py
src/foxkids/dto/: __init__.py  block.py  series.py
src/foxkids/routes/: __init__.py  block.py  current_promo.py  series.py  stream_handler.py  stream_manager.py
src/foxkids/service_layer/: __init__.py  series_manager.py  stream_service.py
src/foxkids/settings/: config.py
src/foxkids/utils/: bash_formatter.py
tests/: test_bash_formatter.py  test_settings.py
tests/adapters/: test_file_repository.py  test_storage.py
tests/domain/: test_block.py  test_features.py  test_series.py
tests/service_layer/: test_dto.py  test_series_manager.py  test_stream_service.py
tests/test_mnt_sample/: program.json
(+3 files in other folders)
