[tool.poetry]
name = "foxkids-backend"
version = "0.1.0"
description = "Бекенд сервиса foxkids-online.com"
authors = []
packages = [{include = "*", from="src"}]
readme = "README.md"

[tool.poetry.scripts]
my-script = "foxkids"

[tool.pytest_env]
ENV_FOR_DYNACONF = "test"

[tool.pytest.ini_options]
pythonpath = "./src"

[tool.poetry.dependencies]
python = "^3.12"
pdoc3 = "^0.11.1"
sqlalchemy = "^2.0.35"
dynaconf = "^3.2.6"
fastapi = "^0.115.3"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
schedule = "^1.2.2"
python-multipart = "^0.0.12"
jinja2 = "^3.1.4"
pre-commit = "^4.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.5"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

